--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -74,3 +74,43 @@
     font-family:'Times New Roman', Times, serif;
     margin-top: 60px;
 }
+.plus{
+    background-color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
+    border-color: black;
+    border-radius: 50px;
+    height: 30px;
+    width: 70px;
+    font-size: 17px;
+    transition: all 0.3s;
+    font-family:'Times New Roman', Times, serif;
+    margin-top: 30px;
+}
+.plus:hover{
+    background-color: rgb(28, 133, 27);
+    color: white;
+}
+.minus{
+    background-color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
+    border-color: black;
+    border-radius: 50px;
+    height: 30px;
+    width: 70px;
+    font-size: 17px;
+    transition: all 0.3s;
+    font-family:'Times New Roman', Times, serif; 
+}
+.minus:hover{
+    background-color: rgb(111, 28, 28);
+    color: white;
+}
+.FirstInput{
+    margin-top: 30px;
+    border-radius: 50px;
+    height: 20px;
+}
+.calculadora{
+    display: flex;
+    margin-top: 30px;
+}
